# Brain_Cell_KG

./: .gitignore  Claude.md  Makefile  README.md  pyproject.toml
config/collectdata/: vfb_fullontologies.txt
config/dumps/: neo4j2owl-config.yaml
config/update-prod/: pdb_set_indices.neo4j
config/updatetriplestore/: rdf4j.txt
owl/: BG2WMB_AT_map_template.owl  scFAIR_WHB2WMB_template.owl
reports/: BG_WMB_mapping_report.csv  cell_set_map.csv  missing_namespaces_report.csv
src/cypher/: BG_WMB_mapping_report.cypher
src/cypher_updates/: README.md  add_cell_counts.cypher
src/scripts/: README.md
src/scripts/BG_WMB_AT/scripts/: WMB_BG_AT_map.py  fetch_bg2wmb_mappings.py
src/scripts/BG_WMB_AT/source_data/: MWB_consensus_homology.csv
src/scripts/WMB_token_map/: Claude.md
src/scripts/WMB_token_map/reports/: wmb_cell_cluster_token_mapping.csv  wmb_cluster_composition_report.csv  wmb_most_general_terms_report.csv  wmb_neurotransmission_consistency_report.csv  wmb_problem_tokens_report.csv  wmb_token_kg_mapping_complete_matching_summary.csv  wmb_token_mapping_complete.xlsx  wmb_token_usage_report.csv
src/scripts/WMB_token_map/scripts/: generate.py  generate_additional_reports.py  generate_wmb_token_reports.py  kg_token_matcher.py  wmb_token_mapper.py
src/scripts/WMB_token_map/source_data/: WMB_tokens_20250922.csv
src/templates/: scFAIR_WHB2WMB_template.tsv
src/utils/: generate_report.py  namespace_detective.py  neo4j_bolt_wrapper.py  prefixes.json  prefixes.txt  template_generator.py  test_update_kg.py  update_kg.py
(+10 files in other folders)
