[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-cell-kg"
version = "0.1.0"
description = "Knowledge graph tools for brain cell annotation transfer and reporting"
authors = [
    {name = "Brain Cell KG Team"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "neo4j>=5.0.0",
    "pandas>=1.5.0",
    "pathlib",
    "jupyter>=1.0.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true